<resources>
    <string name="app_name">TC23</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="bill_template">$123.45</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="empty_price">$0.00</string>
    <string name="total_amount">Total Amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="_1_person">1</string>
    <string name="_2_people">2</string>
    <string name="_3_people">3</string>
    <string name="_4_people">4</string>
    <string name="total_per_person">Total per Person</string>
    <string name="amount">Amount</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="no_rounding_text">No Rounding</string>
    <string name="round_tip_text">Round Tip</string>
    <string name="round_total_text">Round Total</string>

    <string name="no_rounding_value">no_rounding</string>
    <string name="round_tip_value">tip_round</string>
    <string name="round_total_value">total_round</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>