<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Bill Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/bill_amount" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:hint="@string/bill_template"
                android:importantForAutofill="no" />
        </LinearLayout>

        <!-- Tip Percent -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_percent"
                android:layout_weight="2" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_outline_remove_24"
                app:iconGravity="textStart"
                app:iconPadding="-3dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20%" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconGravity="textStart"
                app:iconPadding="-3dp" />
        </LinearLayout>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="20" />

        <!-- Tip Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/empty_price" />
        </LinearLayout>

        <!-- Total Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/empty_price" />
        </LinearLayout>

        <!-- Number of People -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_people"
                android:layout_weight="2"/>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_person" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_people" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_people" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_people" />
            </RadioGroup>
        </LinearLayout>

        <!-- Total Per Person -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_per_person"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/empty_price" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>